[package]
name = "imageops-ai"
version = "0.1.0"
edition = "2021"
authors = ["nusu-github"]
description = "AI-powered image operations library for advanced image processing tasks"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nusu-github/imageops-ai"
documentation = "https://docs.rs/imageops-ai"
repository = "https://github.com/nusu-github/imageops-ai"
keywords = ["image", "ai", "processing", "alpha", "foreground"]
categories = ["multimedia::images", "computer-vision"]

[features]
default = []

test = ["image/png"]
rayon = ["dep:rayon", "image/rayon", "imageproc/rayon"]

[dependencies]
image = { version = "0.25", default-features = false }
imageproc = { version = "0.25", default-features = false }
itertools = "0.14.0"
libblur = "0.19.3"
rayon = { version = "1.10.0", optional = true }
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.5"

[[bench]]
name = "imageops_benchmarks"
harness = false
